# hq_esp32_provisioning_app

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  esp_controller.code-workspace  partitions.csv  sdkconfig  sdkconfig.old
components/mongoose_drv/: CMakeLists.txt  prod_http_app.c  prod_http_app.h
components/production/: CMakeLists.txt  cmd_system.c  cmd_wifi.c  mdns_service.c  mdns_service.h  ota.c  ota_drv.h  prod_app.c  prod_app.h
main/: CMakeLists.txt  app_config.h  main.c  parameters.c  parameters.h
